<resources>
    <string name="app_name">InventoryApp</string>
    <string name="activity_details_title">Product Details</string>
    <string name="activity_details_insert_mode">Add New Product</string>
    <string name="currency_identifier">$</string>
    <string name="sell">Sell</string>

    <!-- Strings for the empty list view -->
    <string name="empty_list">No Products found</string>
    <string name="empty_list_suggestion">Use button to add product</string>

    <!-- Strings for menu -->
    <string name="insert_dummy">Insert Dummy Data</string>
    <string name="delete_all">Delete All Data</string>
    <string name="out_of_stock">This Product is out of stock</string>
    <string name="negative_stock">Negative stock not allowed</string>

    <!-- String for Details screen -->
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_change">Change Quantity</string>
    <string name="add_image">Click to add image</string>
    <string name="no_image">Image is required</string>

    <!-- Details Menu -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_notification">Product is deleted</string>
    <string name="no_product_name">Product name is required</string>
    <string name="no_price">Price is required</string>
    <string name="no_supplier_name">Supplier email required</string>
    <string name="no_quantity">Quantity is required</string>
    <string name="product_saved">Product details saved</string>
    <string name="product_inserted">New product stored</string>
    <string name="not_saved">Product not saved</string>

    <!-- Alert Dialog messages -->
    <string name="discard">Discard and Leave</string>
    <string name="stay_here">Stay Here</string>
    <string name="unsaved_data">Discard unsaved data and leave?</string>
    <string name="delete_dialog">Delete this Product?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_entries">Are you sure you want to delete all entries?</string>
</resources>
